set(LIB_FILES block.h)
set(LIB_FILES ${LIB_FILES} LCA.h)
set(LIB_FILES ${LIB_FILES} PerfectMatching.h)
set(LIB_FILES ${LIB_FILES} PMimplementation.h)
set(LIB_FILES ${LIB_FILES} PQ.h)
set(LIB_FILES ${LIB_FILES} timer.h)
set(LIB_FILES ${LIB_FILES} misc.cpp)
set(LIB_FILES ${LIB_FILES} PMduals.cpp)
set(LIB_FILES ${LIB_FILES} PMexpand.cpp)
set(LIB_FILES ${LIB_FILES} PMinit.cpp)
set(LIB_FILES ${LIB_FILES} PMinterface.cpp)
set(LIB_FILES ${LIB_FILES} PMmain.cpp)
set(LIB_FILES ${LIB_FILES} PMrepair.cpp)
set(LIB_FILES ${LIB_FILES} PMshrink.cpp)
set(LIB_FILES ${LIB_FILES} MinCost/MinCost.h MinCost/MinCost.cpp)
add_library(blossom5 ${LIB_FILES})
target_include_directories(blossom5 PUBLIC ${CMAKE_CURRENT_LIST_DIR})